# da-agg

./: .gitmodules  Cargo.toml  Dockerfile  Map.json  README.md  build.rs
celestia/: go.mod  go.sum  gqlgen.yml  server.go
celestia/common/: celestia.go
celestia/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
celestia/graph/model/: models_gen.go
src/: main.rs  model.rs  server.rs
static/: index.html
