[package]
name = "da"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
axum = "0.6.20"
prost = "0.12.3"
serde = "1.0.193"
tokio = {version="1.35.0", features=['full']}
tonic = { version = "0.10.2", features = ["transport","tls","tls-roots","tls-webpki-roots"] }

[build-dependencies]
tonic-build = "0.10.2"
