[package]
name = "da"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
axum = "0.6.20"
prost = "0.12.3"
serde = "1.0.193"
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "46ff36386d11e52faae038d5afe8d2f7a39dfe39" }
#tokio = { version="1.28", features=['full'] } # for higher version, build fails due to near-da-rpc dependency
tonic = { version = "0.10.2", features = ["transport","tls","tls-roots","tls-webpki-roots"] }
sha2 = "0.10.8"

# Avail
avail-subxt = { git = "https://github.com/availproject/avail.git", rev = "d438abe92f22d0cbc8d0520d1f6d18d79c61aaf4" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0", default-features = false }
subxt = { version = "0.29" }

# Near
near-da-rpc = { git = "https://github.com/near/rollup-data-availability.git", rev = "557485e3140342617e7c6f110458a6ca63224d20" }

ethers = "2.0.11"

# Dependency `subxt` uses it's own 'version' of sp-core so we need to patch it :)
[patch.crates-io]
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core-hashing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
tokio = { git = "https://github.com/tokio-rs/tokio", rev = "46ff36386d11e52faae038d5afe8d2f7a39dfe39" }


[build-dependencies]
tonic-build = "0.10.2"
